--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container my-5">
         <div class="bg-white p-4 rounded border ">
             <h2 class="mb-4">Payment form example</h2>
-            <div class="alert alert-danger" role="alert">Some fields are missing</div>
+            <div class="alert alert-danger" role="alert">Some fields are missing
+            </div>
             <form>
                <div class="row mb-3">
                     <div class="col-md-6">
@@ -30,6 +31,76 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="firstname" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstname">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="lastname" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastname">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="city" class="form-label">City</label>
+                        <input type="text" class="form-control" id="city">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="state" class="form-label">State</label>
+                        <select class="form-select" id="state" name="state">
+                            <option value="Alabama">Alabama</option>
+                            <option value="Alaska">Alaska</option>
+                            <option value="Arizona">Arizona</option>
+                            <option value="Arkansas">Arkansas</option>
+                            <option value="California">California</option>
+                            <option value="Colorado">Colorado</option>
+                            <option value="Connecticut">Connecticut</option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+<option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="postalcode" class="form-label">Postal Code</label>
+                        <input type="text" class="form-control" id="postalcode">
+                    </div>
+                </div>
+
+
+
+        
             </form>
         </div>    
     </div>
