--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             </div>
                         </div> 
                         </div>
-                    
+                    <!-- The indents on the closing div tags are off -->
                     <div class="col-md-2"></div>
                     <div class="col-md-6">
                         <label for="message" class="form-label">Message</label>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </form>
-           
+           <!-- There are extra spaces between form and divs -->
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <button class="btn btn-secondary me-md-2" type="button">Cancel</button>
                     <button class="btn btn-primary" type="button">Send</button>
